@@ -2,6 +2,15 @@
 
         Reviewed by Adam Barth.
 
+        Document CPU() macros in comments.
+        https://bugs.webkit.org/show_bug.cgi?id=33147
+
+        * wtf/Platform.h:
+
+2010-01-04  Maciej Stachowiak  <mjs@apple.com>
+
+        Reviewed by Adam Barth.
+
         Reorganize, document and rename CPU() platform macros.
         https://bugs.webkit.org/show_bug.cgi?id=33145
         ExecutableAllocatorSymbian appears to have buggy ARM version check
